Reapply "given  task completed"
This reverts commit 35b8d9ded8a947c80760338f998d8cef1844cad2.